// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Headline /> should render embiggened headline 1`] = `
.c0 {
  text-align: left;
  font-size: 24px;
  font-family: ProximaNovaCond,sans-serif;
  line-height: 1.3;
  margin-top: 0;
  margin-bottom: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    margin-bottom: 8px;
  }
}

@media only screen and (min-width:37.37em) {
  .c0 {
    font-size: 34px;
    margin-bottom: 4px;
  }
}

<Headline
  embiggened={true}
>
  <EnsureDefaultTheme>
    <ThemeProvider
      theme={[Function]}
    >
      <headline__EmbiggenedHeadline
        dangerouslySetInnerHTML={
          Object {
            "__html": "Let Us Pet The Cats, <i>Red Dead Redemption 2</i>",
          }
        }
      >
        <StyledComponent
          dangerouslySetInnerHTML={
            Object {
              "__html": "Let Us Pet The Cats, <i>Red Dead Redemption 2</i>",
            }
          }
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "headline__EmbiggenedHeadline-sc-759qgu-1",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  "text-align:left;font-size:",
                  [Function],
                  ";font-family:",
                  [Function],
                  ";line-height:",
                  [Function],
                  ";margin-top:0;margin-bottom:0;",
                  "@media only screen and ",
                  "(min-width: 37.37em)",
                  "{",
                  "
		margin-bottom: 8px;
	",
                  "}",
                  "@media only screen and ",
                  "(min-width: 37.37em)",
                  "{",
                  "
		font-size: ",
                  [Function],
                  ";
		margin-bottom: 4px;
	",
                  "}",
                ],
              },
              "displayName": "headline__EmbiggenedHeadline",
              "foldedComponentIds": Array [
                "headline__SimpleHeadline-sc-759qgu-0",
              ],
              "render": [Function],
              "styledComponentId": "headline__EmbiggenedHeadline-sc-759qgu-1",
              "target": "h1",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <h1
            className="c0"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Let Us Pet The Cats, <i>Red Dead Redemption 2</i>",
              }
            }
          />
        </StyledComponent>
      </headline__EmbiggenedHeadline>
    </ThemeProvider>
  </EnsureDefaultTheme>
</Headline>
`;

exports[`<Headline /> should render properly 1`] = `
.c0 {
  text-align: left;
  font-size: 24px;
  font-family: ProximaNovaCond,sans-serif;
  line-height: 1.3;
  margin-top: 0;
  margin-bottom: 0;
}

@media only screen and (min-width:37.37em) {
  .c0 {
    margin-bottom: 8px;
  }
}

<Headline>
  <EnsureDefaultTheme>
    <ThemeProvider
      theme={[Function]}
    >
      <headline__SimpleHeadline
        dangerouslySetInnerHTML={
          Object {
            "__html": "I Like Chopping Firewood <i>(In Red Dead Redemption 2)</i>",
          }
        }
      >
        <StyledComponent
          dangerouslySetInnerHTML={
            Object {
              "__html": "I Like Chopping Firewood <i>(In Red Dead Redemption 2)</i>",
            }
          }
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "headline__SimpleHeadline-sc-759qgu-0",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  "text-align:left;font-size:",
                  [Function],
                  ";font-family:",
                  [Function],
                  ";line-height:",
                  [Function],
                  ";margin-top:0;margin-bottom:0;",
                  "@media only screen and ",
                  "(min-width: 37.37em)",
                  "{",
                  "
		margin-bottom: 8px;
	",
                  "}",
                ],
              },
              "displayName": "headline__SimpleHeadline",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "headline__SimpleHeadline-sc-759qgu-0",
              "target": "h1",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <h1
            className="c0"
            dangerouslySetInnerHTML={
              Object {
                "__html": "I Like Chopping Firewood <i>(In Red Dead Redemption 2)</i>",
              }
            }
          />
        </StyledComponent>
      </headline__SimpleHeadline>
    </ThemeProvider>
  </EnsureDefaultTheme>
</Headline>
`;
